; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_malloc_hook.c_aligned_alloc.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_malloc_hook.c_aligned_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PREFIX_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @skynet_aligned_alloc(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @PREFIX_SIZE, align 8
  %9 = load i64, i64* %3, align 8
  %10 = add i64 %8, %9
  %11 = sub i64 %10, 1
  %12 = load i64, i64* %3, align 8
  %13 = sub i64 %12, 1
  %14 = xor i64 %13, -1
  %15 = and i64 %11, %14
  %16 = add i64 %7, %15
  %17 = call i8* @je_aligned_alloc(i64 %6, i64 %16)
  store i8* %17, i8** %5, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %23, label %20

20:                                               ; preds = %2
  %21 = load i64, i64* %4, align 8
  %22 = call i32 @malloc_oom(i64 %21)
  br label %23

23:                                               ; preds = %20, %2
  %24 = load i8*, i8** %5, align 8
  %25 = call i8* @fill_prefix(i8* %24)
  ret i8* %25
}

declare dso_local i8* @je_aligned_alloc(i64, i64) #1

declare dso_local i32 @malloc_oom(i64) #1

declare dso_local i8* @fill_prefix(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
